apps/ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5.19.0-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: ghost
              containerPort: 2368
