apps/ghost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ghost
spec:
  rules:
  - host: blog.jiji.playground.padok.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              number: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
